fix creation of new featurelist